Fix issue with hover on mobile devices

--- a/src/style.css
+++ b/src/style.css
@@ -159,8 +159,10 @@ input {
     background-color: var(--tile);
 }
 
-button.tile:hover {
-    background-color: var(--tile-hover);
+@media (hover:hover) {
+    button.tile:hover {
+       background-color: var(--tile-hover);
+}
 }
 
 .hidden-board {
